# my_printf

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: cmake.yml  doxygen.yml
docs/: BUILDING.md  CMakeLists.txt  USAGE.md
headers/my_printf/: format.h  my_printf.h
scripts/: run-clang-format.sh
sources/: format.c  my_printf.c
tests/: CMakeLists.txt
tests/headers/: test_format.hpp
tests/sources/: test_format.cpp  test_printf.cpp
